@@ -4,9 +4,9 @@ import dev.langchain4j.model.ollama.OllamaChatModel;
 import dev.langchain4j.model.ollama.OllamaEmbeddingModel;
 import dev.langchain4j.model.ollama.OllamaStreamingChatModel;
 import org.slf4j.Logger;
-import org.apache.commons.lang3.StringUtils;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+import uw.ai.center.constant.ModelType;
 import uw.ai.center.vo.AiModelConfigData;
 import uw.ai.center.vendor.AiVendor;
 import uw.ai.center.vendor.AiVendorClientWrapper;
@@ -14,6 +14,7 @@ import uw.common.app.vo.JsonConfigBox;
 import uw.common.app.vo.JsonConfigParam;
 
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -45,50 +46,57 @@ public class OllamaVendor implements AiVendor {
     }
 
     @Override
-    public List<JsonConfigParam> vendorParam() {
-        return List.of();
+    public List<JsonConfigParam> configParam() {
+        return Arrays.asList(OllamaParam.Config.values());
     }
 
     @Override
-    public List<JsonConfigParam> modelParam() {
-        return List.of();
+    public AiVendorClientWrapper buildClientWrapper(AiModelConfigData configData) {
+        ModelType modelType = ModelType.of(configData.getModelType());
+        if (modelType == null) {
+            logger.warn("未知的模型类型: {}, configId={}", configData.getModelType(), configData.getId());
+            return null;
+        }
+        return switch (modelType) {
+            case CHAT -> buildChat(configData);
+            case EMBEDDING -> buildEmbedding(configData);
+            default -> {
+                logger.warn("OllamaVendor暂不支持模型类型: {}", modelType);
+                yield null;
+            }
+        };
     }
 
-    @Override
-    public List<JsonConfigParam> embedParam() {
-        return List.of();
-    }
-
-    @Override
-    public AiVendorClientWrapper buildClientWrapper(AiModelConfigData aiModelConfigData) {
-        JsonConfigBox vendorParamBox = aiModelConfigData.getVendorParamBox();
-        String apiUrl = aiModelConfigData.getApiUrl();
-        String modelMain = aiModelConfigData.getModelMain();
-        String modelEmbed = aiModelConfigData.getModelEmbed();
-        double temperature = vendorParamBox != null
-                ? vendorParamBox.getDoubleParam("temperature", 0.7) : 0.7;
+    private AiVendorClientWrapper buildChat(AiModelConfigData configData) {
+        JsonConfigBox configParamBox = configData.getConfigParamBox();
+        double temperature = configParamBox != null
+                ? configParamBox.getDoubleParam("temperature", 0.7) : 0.7;
 
         var syncModel = OllamaChatModel.builder()
-                .baseUrl(apiUrl)
-                .modelName(modelMain)
+                .baseUrl(configData.getApiUrl())
+                .modelName(configData.getModelName())
                 .temperature(temperature)
                 .timeout(Duration.ofSeconds(120))
                 .build();
 
         var streamingModel = OllamaStreamingChatModel.builder()
-                .baseUrl(apiUrl)
-                .modelName(modelMain)
+                .baseUrl(configData.getApiUrl())
+                .modelName(configData.getModelName())
                 .temperature(temperature)
                 .timeout(Duration.ofSeconds(120))
                 .build();
 
-        var embeddingModel = StringUtils.isNotBlank(modelEmbed) ? OllamaEmbeddingModel.builder()
-                .baseUrl(apiUrl)
-                .modelName(modelEmbed)
-                .timeout(Duration.ofSeconds(60))
-                .build() : null;
+        return new AiVendorClientWrapper(configData, syncModel, streamingModel, null);
+    }
 
-        return new AiVendorClientWrapper(aiModelConfigData, syncModel, streamingModel, embeddingModel);
+    private AiVendorClientWrapper buildEmbedding(AiModelConfigData configData) {
+        var embeddingModel = OllamaEmbeddingModel.builder()
+                .baseUrl(configData.getApiUrl())
+                .modelName(configData.getModelName())
+                .timeout(Duration.ofSeconds(60))
+                .build();
+
+        return new AiVendorClientWrapper(configData, null, null, embeddingModel);
     }
 
     @Override
